--- a/views/pages/result.ejs
+++ b/views/pages/result.ejs
@@ -1,6 +1,6 @@
-<div>
+<div class="results-div">
   <img src="https://via.placeholder.com/150" alt="placeholder">
   <h3>something searched</h3>
   <p>to form cool paragraphs</p>
-  <img id="resultsrjs" src="" alt="">
+  <a href=" src="" alt="">
 </div>
