--- a/views/pages/error.ejs
+++ b/views/pages/error.ejs
@@ -1,6 +1,6 @@
 <html>
     <head>
-
+            <%- include('../layout/head.ejs') %>
     </head>
     <body>
         <header>
@@ -12,6 +12,6 @@
         </main>
     </body>
     <footer>
-        
+            <%- include('../layout/footer.ejs') %>
     </footer>
 </html>
