--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,6 +1,6 @@
 <html>
     <head>
-
+        <%- include('../layout/head.ejs') %>
     </head>
     <body>
         <header>
@@ -15,6 +15,6 @@
         </main>
     </body>
     <footer>
-        
+            <%- include('../layout/footer.ejs') %>
     </footer>
 </html>
