--- a/views/pages/search.ejs
+++ b/views/pages/search.ejs
@@ -1,3 +1,4 @@
+<div id="searches-form"></div>
 <form id="searches-form" action="/searches" method="post">
   <h3>
     What happened on your birthday.
