--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -12,6 +12,7 @@
             <a href="/aboutus">About Us</a>
             <a href="/database">Database</a>
             <a href="/show">Sample Search Page</a>
+            <%- include('/pages/search') %>
         </main>
     </body>
     <footer>
