moved result.ejs and search.ejs from pages to layout. included ejs template into index and show.ejs

--- a/public/styles/module.css
+++ b/public/styles/module.css
@@ -16,7 +16,7 @@ h3 .results-div{
   font-size: 20px;
 }
 /* search template */
-.searches-form{
+#searches-form{
   background-color: #9656a1;
 }
 
