--- a/views/layout/head.ejs
+++ b/views/layout/head.ejs
@@ -3,6 +3,6 @@
 <title>Birthday Finder</title>
 <link rel="stylesheet" href="/styles/base.css">
 <link rel="stylesheet" href="/styles/layout.css">
-<link rel="stylesheet" href="/styles/modules.css">
+<link rel="stylesheet" href="/styles/module.css">
 <link rel="stylesheet" href="/styles/style.css">
 <link rel="stylesheet" href="/styles/theme.css">
