--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -12,7 +12,7 @@
             <a href="/aboutus">About Us</a>
             <a href="/database">Database</a>
             <a href="/show">Sample Search Page</a>
-            <%- include('/pages/search') %>
+            <%- include('../layout/search') %>
         </main>
     </body>
     <footer>
