--- a/views/pages/show.ejs
+++ b/views/pages/show.ejs
@@ -8,6 +8,7 @@
         </header>
         <main>
             <p>Showing Results</p>
+            <%- include('../layout/result.ejs') %>
             <a href="/">Home</a>
         </main>
     </body>
