reorganized style sheets

--- a/views/layout/head.ejs
+++ b/views/layout/head.ejs
@@ -1,6 +1,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Birthday Finder</title>
+<link rel="stylesheet" href="/styles/reset.css">
 <link rel="stylesheet" href="/styles/base.css">
 <link rel="stylesheet" href="/styles/layout.css">
 <link rel="stylesheet" href="/styles/module.css">
