--- a/views/pages/showdb.ejs
+++ b/views/pages/showdb.ejs
@@ -4,7 +4,7 @@
     </head>
     <body>
         <header>
-
+                <%- include('../layout/header.ejs') %>
         </header>
         <main>
             <h1>Showing DB</h1>
