--- a/views/pages/aboutus.ejs
+++ b/views/pages/aboutus.ejs
@@ -4,7 +4,7 @@
     </head>
     <body>
         <header>
-
+                <%- include('../layout/header.ejs') %>
         </header>
         <main>
             <p>About us</p>
