--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,7 +4,7 @@
     </head>
     <body>
         <header>
-
+                <%- include('../layout/header.ejs') %>
         </header>
         <main>
             <h1>Home Page</h1>
