--- a/public/styles/module.css
+++ b/public/styles/module.css
@@ -1,30 +1,82 @@
-/* results template */
+/* ////////////////////////////////////////////////////// */
+/* add.ejs (form to add to Database template) */
+/* ////////////////////////////////////////////////////// */
+
+/* ////////////////////////////////////////////////////// */
+/* person.ejs (About us -- single person's template) */
+/* ////////////////////////////////////////////////////// */
+
+/* ////////////////////////////////////////////////////// */
+/* result.ejs (results template) */
+/* ////////////////////////////////////////////////////// */
 .results-div{
   background-color: #9656a1;
   flex-direction: column;
   width: auto;
   height: auto;
-
 }
-
 img .results-div{
   height: 50%;
-
 }
-
 h3 .results-div{
   font-size: 20px;
 }
-/* search template */
+/* ////////////////////////////////////////////////////// */
+/* search.ejs (search template) */
+/* ////////////////////////////////////////////////////// */
 #searches-form{
-  background-color: #9656a1;
+  /* Basic Attributes */
+  background-color: #C2B0C9;
+  width: 40vw;
+  border-radius: 1em;
+  /* Text */
+  text-align: center;
 }
-
-h3 .searches-form{
-  font-size: 25%;
+#searches-form h3{
+  font-size: 2.5em;
+  padding: 1em;
 }
+#searches-form input{
+  /* Sizing */
+  height: 4.5em;
+  width: 50%;
+  /* Background Color */
+  background-color: #CCCCCC;
+  /* Text */
+  font-size: 1em;
+  text-align: center;
+  /* Layout center&column */
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+}
+#searches-form button{
+  /* Sizing */
+  height: 3.5em;
+  width: 33%;
+  /* Background Color */
+  background-color: #CCCCCC;
+  border: black solid 0.1em;
+  /* Text */
 
-/* HEADER */
+  /* Layout center&column */
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  /* Margin Top&Bottom */
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+/* ////////////////////////////////////////////////////// */
+/* HEADER.ejs (header template) */
+/* ////////////////////////////////////////////////////// */
+header{
+  /* Background Color */
+  background-color: #9656A1;
+  /* Text */
+  text-align: center;
+  color: #CCCCCC;
+}
 .headerwrapper {
   display: grid;
   grid-template-columns: repeat(10, 1fr);
@@ -34,54 +86,32 @@ h3 .searches-form{
 .headerone {
   grid-column: 1 /3 ;
   grid-row: 1;
-  /* border-style: solid;
-  border-width: 1px; */
-  height: auto;
-  text-align: center;
 }
 .headertwo { 
-  grid-column: 3 / 8;
+  grid-column: 3 / 9;
   grid-row: 1;
-  /* border-style: solid;
-  border-width: 1px; */
-  height: auto;
-  text-align: center;
   font-size: 5em;
   line-height: 150px;
 }
-
 .headerthree {
-  grid-column: 8/10;
+  grid-column: 9/11;
   grid-row: 1;
-    /* border-style: solid;
-  border-width: 1px; */
-   height: auto;
-   text-align: center
 }
 .headerfour {
   grid-column:1/3 ;
   grid-row: 2;
-
-   height: 50%;
-   text-align: center;
 }
 .headerfive {
-  grid-column: 3/8;
+  grid-column: 3/9;
   grid-row: 2;
-   height: 50%;
-   text-align: center;
 }
 .headersix {
-  grid-column: 8/10;
+  grid-column: 9/11;
   grid-row: 2;
-   height: 50%;
-   text-align: center;
 }
 .headerimg {
   width: 125px;
-  height: auto;
 }
-
 .headerbutton {
     border-radius: 4px;
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
