--- a/views/layout/search.ejs
+++ b/views/layout/search.ejs
@@ -4,7 +4,7 @@
       What happened on your birthday.
     </h3>
     <Fieldset>
-      <input type="date" name="search" placeholder="month/day/year">
+      <input type="date" name="search" placeholder="month/day/year" />
       <button type="submit">Search</button>
     </Fieldset>
   </form>
