--- a/views/pages/show.ejs
+++ b/views/pages/show.ejs
@@ -1,18 +1,18 @@
 <html>
-    <head>
-            <%- include('../layout/head.ejs') %>
-    </head>
-    <body>
-        <header>
-                <%- include('../layout/header.ejs') %>
-        </header>
-        <main>
-            <p>Showing Results</p>
-            <%- include('../layout/result.ejs') %>
-            <a href="/">Home</a>
-        </main>
-    </body>
-    <footer>
-            <%- include('../layout/footer.ejs') %>
-    </footer>
+  <head>
+    <%- include('../layout/head.ejs') %>
+  </head>
+  <body>
+    <header>
+      <%- include('../layout/header.ejs') %>
+    </header>
+    <main>
+      <p>Showing Results</p>
+      <%- include('../layout/result.ejs', {events:events}) %>
+      <a href="/">Home</a>
+    </main>
+  </body>
+  <footer>
+    <%- include('../layout/footer.ejs') %>
+  </footer>
 </html>
