--- a/views/layout/result.ejs
+++ b/views/layout/result.ejs
@@ -1,7 +1,9 @@
-<div class="results-div">
-  <img alt="placeholder" src=<%= event.img %>>
-  <h3><%= event.year %> - <%= event.title %></h3>
-  <p><%= event.text %></p>
-  <a alt="Wikipedia" href="<%= event.link %>" target="_blank"></a>
-</div>
+<% event.forEach(division => { %>
+  <div class="results-div">
+    <img alt="placeholder" src=<%= division.img %>>
+    <h3><%= division.year %> - <%= division.title %></h3>
+    <p><%= division.text %></p>
+    <a alt="Wikipedia" href="<%= division.link %>" target="_blank"></a>
+  </div>
+<% }) %>
 
