--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -3,18 +3,19 @@
         <img class="headerimg"src ="https://i.pinimg.com/originals/75/42/da/7542da36d4b5ab5b82920fed275be9b2.png">
     </div>
     <div class="headertwo">
-        <h1>Birthday Finder</h1>
+        <h1><a class="headerLink" href="/" style="text-decoration:none">Birthday Finder</a></h1>
     </div>
     <div class="headerthree">
         <img class="headerimg"src = "https://i.pinimg.com/originals/75/42/da/7542da36d4b5ab5b82920fed275be9b2.png">
     </div>
     <div class="headerfour">
-        <button class="headerbutton pure-button">Today's Date</button>
+            <button class="headerbutton pure-button">Today's Date</button>
     </div>
     <div class="headerfive">
         <button class="headerbutton pure-button">Search our Database</button>
     </div>
     <div class="headersix">
-         <button class="headerbutton pure-button">About Us</button>
+         <button class="headerbutton pure-button"><a class ="headerAboutUs"href='/aboutus' style="text-decoration:none">About Us</a></button>
     </div>
 </div>
+
