--- a/views/pages/aboutus.ejs
+++ b/views/pages/aboutus.ejs
@@ -7,8 +7,31 @@
                 <%- include('../layout/header.ejs') %>
         </header>
         <main>
-            <p>About us</p>
-            <a href="/">Home</a>
+            <!-- <img class ='team' src= 'https://files.slack.com/files-pri/T039KG69K-FQR1K4TFS/image_from_ios.jpg'> -->
+            <div class="results-div">
+                <img alt="placeholder" src='https://carlisletheacarlisletheatre.org/images/person-clipart-silhouette-7.jpg'>
+                <h3>Stephen - The King</h3>
+                <p>I am currently a student at code fellows, studying HTML, Javascript and CSS. I am also getting experience with Github, Chrome DEV tools, and how to look at code to find bugs. My background is in Customer Service, my last job being at Dick's Sporting Goods. It was a great company, and had oppertunities for me to move up in positions, but I quickly realized that isn't what I wanted to do. Customer service taught me how to work on a team, and to understand what a customer is looking for in a product. </p>
+                <a alt="linkedIn" href= "https://www.linkedin.com/in/charles-glass1/"></a>
+              </div>
+              <div class="results-div">
+                <img alt="placeholder" src='https://carlisletheacarlisletheatre.org/images/person-clipart-silhouette-7.jpg'>
+                <h3>Paul - The Ace</h3>
+                <p>I am currently a student at code fellows, studying HTML, Javascript and CSS. I am also getting experience with Github, Chrome DEV tools, and how to look at code to find bugs. My background is in Customer Service, my last job being at Dick's Sporting Goods. It was a great company, and had oppertunities for me to move up in positions, but I quickly realized that isn't what I wanted to do. Customer service taught me how to work on a team, and to understand what a customer is looking for in a product. </p>
+                <a alt="linkedIn" href= "https://www.linkedin.com/in/charles-glass1/"></a>
+              </div>
+              <div class="results-div">
+                <img alt="placeholder" src='https://carlisletheacarlisletheatre.org/images/person-clipart-silhouette-7.jpg'>
+                <h3>Leandro - The Jack</h3>
+                <p>I am currently a student at code fellows, studying HTML, Javascript and CSS. I am also getting experience with Github, Chrome DEV tools, and how to look at code to find bugs. My background is in Customer Service, my last job being at Dick's Sporting Goods. It was a great company, and had oppertunities for me to move up in positions, but I quickly realized that isn't what I wanted to do. Customer service taught me how to work on a team, and to understand what a customer is looking for in a product. </p>
+                <a alt="linkedIn" href= "https://www.linkedin.com/in/charles-glass1/"></a>
+              </div>
+              <div class="results-div">
+                <img alt="placeholder" src='https://carlisletheacarlisletheatre.org/images/person-clipart-silhouette-7.jpg'>
+                <h3>Charles - The Joker</h3>
+                <p>I am currently a student at code fellows, studying HTML, Javascript and CSS. I am also getting experience with Github, Chrome DEV tools, and how to look at code to find bugs. My background is in Customer Service, my last job being at Dick's Sporting Goods. It was a great company, and had oppertunities for me to move up in positions, but I quickly realized that isn't what I wanted to do. Customer service taught me how to work on a team, and to understand what a customer is looking for in a product. </p>
+                <a alt="linkedIn" href= "https://www.linkedin.com/in/charles-glass1/"></a>
+              </div>
         </main>
     </body>
     <footer>
