created birthday-finder database. created birthday table in sql file. connected db. showdb page is rendering the table.

--- a/views/pages/showdb.ejs
+++ b/views/pages/showdb.ejs
@@ -7,8 +7,9 @@
                 <%- include('../layout/header.ejs') %>
         </header>
         <main>
-            <h1>Showing DB</h1>
-            <a href="/">HOme</a>
+            <table>
+                <%- include('../layout/tablerow.ejs') %>
+            </table>
         </main>
     </body>
     <footer>
