got data storing to database, and all the buttons working

--- a/views/layout/head.ejs
+++ b/views/layout/head.ejs
@@ -6,3 +6,4 @@
 <link rel="stylesheet" href="/styles/layout.css">
 <link rel="stylesheet" href="/styles/module.css">
 <link rel="stylesheet" href="/styles/theme.css">
+<link rel="stylesheet" href="/styles/state.css">
