--- a/views/pages/show.ejs
+++ b/views/pages/show.ejs
@@ -6,6 +6,7 @@
         <header>
                 <%- include('../layout/header.ejs') %>
         </header>
+        <%- include('../layout/charlietest.ejs') %>
         <main>
             <%- include('../layout/result.ejs') %>
         </main>
