--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -9,13 +9,15 @@
         <img class="headerimg"src = "https://i.pinimg.com/originals/75/42/da/7542da36d4b5ab5b82920fed275be9b2.png">
     </div>
     <div class="headerfour">
-            <button class="headerbutton pure-button">Today's Date</button>
+        <form action="/searches" method="post">
+        <input id="todayDate" type="hidden" name="search" value=<%=today%>>
+        <button class="headerbutton pure-button">Today's Date</button>
+        </form>
     </div>
     <div class="headerfive">
-        <button class="headerbutton pure-button">Search our Database</button>
+        <button class="headerbutton pure-button"><a class ="headerAboutUs"href='/database' style="text-decoration:none">Search our Database</a></button>
     </div>
     <div class="headersix">
          <button class="headerbutton pure-button"><a class ="headerAboutUs"href='/aboutus' style="text-decoration:none">About Us</a></button>
     </div>
 </div>
-
