--- a/views/layout/tablerow.ejs
+++ b/views/layout/tablerow.ejs
@@ -7,6 +7,9 @@
     <tr>
         <td><%= bday.first_name %></td>
         <td><%= bday.birthday %></td>
-        <td><%= bday.link %></td>
+        <td> <form action="/searches" method="post">
+        <input type="hidden" name="search" value=<%= bday.birthday %>>
+        <button>Go</button>
+        </form></td>
     </tr>
 <% }) %>
