worked on a simple table display

--- a/views/layout/tablerow.ejs
+++ b/views/layout/tablerow.ejs
@@ -2,6 +2,7 @@
         <th>Name</th>
         <th>Birthday</th>
         <th>Link</th>
+        <th>Update/Delete</th>
     </tr>
 <% person.forEach(bday => { %>
     <tr>
