adding loading feature

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,16 +1,17 @@
 <html>
-    <head>
-        <%- include('../layout/head.ejs') %>
-    </head>
-    <body>
-        <header>
-                <%- include('../layout/header.ejs') %>
-        </header>
-        <main>
-            <%- include('../layout/search') %>
-        </main>
-    </body>
-    <footer>
-            <%- include('../layout/footer.ejs') %>
-    </footer>
+  <head>
+    <%- include('../layout/head.ejs') %>
+  </head>
+  <body>
+    <header>
+      <%- include('../layout/header.ejs') %>
+    </header>
+    <main>
+      <%- include('../layout/search') %>
+      <div id="spinner"></div>
+    </main>
+  </body>
+  <footer>
+    <%- include('../layout/footer.ejs') %>
+  </footer>
 </html>
