--- a/views/layout/search.ejs
+++ b/views/layout/search.ejs
@@ -1,7 +1,7 @@
 <div id="searches-form">
   <form action="/searches" method="post">
     <h3>What happened on the day you were born?</h3>
-    <input type="date" name="search" placeholder="month/day/year">
+    <input type="date" name="search" date="00/00/0000" required>
     <button type="submit">Search</button>
   </form>
 </div>
