styled the link button on the db page. fixed error in save to db callback function.

--- a/views/layout/search.ejs
+++ b/views/layout/search.ejs
@@ -2,6 +2,7 @@
   <form action="/searches" method="post">
     <h3>What happened on the day you were born?</h3>
     <input type="date" name="search" date="00/00/0000" required>
+    <!-- <input type="" name="search" pattern="^\d{2}-\d{2}-\d{4}$" > -->
     <button type="submit">Search</button>
   </form>
 </div>
