--- a/views/layout/tablerow.ejs
+++ b/views/layout/tablerow.ejs
@@ -11,7 +11,7 @@
         <td><%= bday.birthday %></td>
         <td> <form action="/searches" method="post">
         <input type="hidden" name="search" value=<%= bday.birthday %>>
-        <button>Go</button>
+        <button class="linkToBirthday">Go</button>
         </form>
         </td>
     <td>
