--- a/public/styles/module.css
+++ b/public/styles/module.css
@@ -140,13 +140,14 @@ color:black;
   width: 75%;
   margin-top: 0px;
 }
-
+/* ///////////////////////////////////////////////////////////////////////////// */
+/* Table Row EJS */
+/* ///////////////////////////////////////////////////////////////////////////// */
 th{
   border: 1px solid black;
   background-color: #F4EFD3;
   color: black;
   width: 400px;
-  padding: 5px;
   font-family:'PT Sans Narrow', sans-serif;
   font-size: 20px;
   height: 40px;
@@ -158,10 +159,19 @@ td{
   background-color: #F4EFD3;
   color: black;
   width: 400px;
-  padding: 5px;
   font-family:'PT Sans Narrow', sans-serif;
-  font-size: 1p6x;
+  font-size: 16px;
+  padding: 0;
   text-align: center;
   height: 40px;
   line-height: 40px;
 } 
+.linkToBirthday{
+  background-color: #555;
+  color: white;
+  padding: 1em 1.5em;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  height: 100%;
+}
