--- a/public/styles/state.css
+++ b/public/styles/state.css
@@ -11,6 +11,7 @@
   width: 100px;
   height: 50px;
   margin-top: 0;
+  border: 2px solid black;
 }
 
 /* The popup form - hidden by default */
@@ -66,3 +67,18 @@
 .form-container .btn:hover, .open-button:hover {
   opacity: 1;
 }
+
+.open-button-two {
+  background-color: #555;
+  color: white;
+  padding: 16px 20px;
+  cursor: pointer;
+  opacity: 0.8;
+  width:100%;
+  height: 100%;
+  display:inline-block;
+  margin-top: 0;
+  border: 2px solid black;
+  box-sizing: border-box;
+}
+
