got the loading screen working. styled table. reworked app.js

--- a/public/styles/module.css
+++ b/public/styles/module.css
@@ -194,11 +194,8 @@ td {
   border-radius: 100%;
 
   position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin: auto;
+  top: 50%;
+  left: 45%;
 
   animation: spin 1s infinite linear;
 }
