--- a/views/pages/aboutus.ejs
+++ b/views/pages/aboutus.ejs
@@ -6,7 +6,8 @@
         <header>
                 <%- include('../layout/header.ejs') %>
         </header>
-        <main>
+        <div id="spinner"></div>
+        <main id="theMain">
 
             <!-- <img class ='team' src= 'https://files.slack.com/files-pri/T039KG69K-FQR1K4TFS/image_from_ios.jpg'> -->
             <div class="results-div">
