--- a/views/pages/error.ejs
+++ b/views/pages/error.ejs
@@ -6,7 +6,8 @@
         <header>
                 <%- include('../layout/header.ejs') %>
         </header>
-        <main>
+        <div id="spinner"></div>
+        <main id="theMain">
             <p>ERROR 500</p>
             <a href="/">Home</a>
         </main>
