--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,9 +6,9 @@
     <header>
       <%- include('../layout/header.ejs') %>
     </header>
-    <main>
+    <div id="spinner"></div>
+    <main id="theMain">
       <%- include('../layout/search') %>
-      <div id="spinner"></div>
     </main>
   </body>
   <footer>
