--- a/views/pages/show.ejs
+++ b/views/pages/show.ejs
@@ -7,7 +7,8 @@
                 <%- include('../layout/header.ejs') %>
         </header>
         <%- include('../layout/charlietest.ejs') %>
-        <main>
+        <div id="spinner"></div>
+        <main id="theMain">
             <%- include('../layout/result.ejs') %>
         </main>
     </body>
