--- a/views/pages/showdb.ejs
+++ b/views/pages/showdb.ejs
@@ -6,8 +6,9 @@
         <header>
                 <%- include('../layout/header.ejs') %>
         </header>
-        <main>
-            <table>
+        <div id="spinner"></div>
+        <main id="theMain">
+            <table id="dbTable">
                 <%- include('../layout/tablerow.ejs') %>
 
             </table>
