--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -11,7 +11,7 @@
     <div class="headerfour">
         <form action="/searches" method="post">
         <input id="todayDate" type="hidden" name="search" value=<%=today%>>
-        <button class="headerbutton pure-button">Today's Date</button>
+        <button onclick="showSpinner()" class="headerbutton pure-button">Today's Date</button>
         </form>
     </div>
     <div class="headerfive">
