--- a/views/layout/tablerow.ejs
+++ b/views/layout/tablerow.ejs
@@ -13,7 +13,7 @@
         <td> 
             <form class="linkToBirthday" action="/searches" method="post">
                 <input type="hidden" name="search" value=<%= bday.birthday %>>
-                <button>Check it out!</button>
+                <button onclick="showSpinner()">Check it out!</button>
             </form>
         </td>
         <td>
@@ -32,8 +32,8 @@
         <td>
         <form class="deleteForm"action="/delete/<%=bday.id%>" method="post">
         <input type="hidden" name="_method" value="delete">
-        </form>
         <button class ="open-button-two"type="submit"  id="<%= bday.id %>">Delete</button>
+    </form>
      </td>
         
     </tr>
