--- a/public/styles/module.css
+++ b/public/styles/module.css
@@ -41,6 +41,7 @@
   background-color: #c2b0c9;
   width: 40vw;
   border-radius: 1em;
+  margin-top: 2em;
   /* Text */
   text-align: center;
 }
@@ -103,7 +104,6 @@ header {
   grid-column: 3 / 9;
   grid-row: 1;
   font-size: 5em;
-  line-height: 150px;
 }
 .headerthree {
   grid-column: 9/11;
@@ -112,23 +112,40 @@ header {
 .headerfour {
   grid-column: 1/3;
   grid-row: 2;
+  background-color: #C2B0C9;
+  border-top: black solid 0.2em;
+  border-bottom: black solid 0.2em;
+  box-shadow: 0px 0px 7px 1px #000000;
 }
 .headerfive {
   grid-column: 3/9;
   grid-row: 2;
+  background-color: #C2B0C9;
+  border-top: black solid 0.2em;
+  border-bottom: black solid 0.2em;
+  box-shadow: 0px 0px 7px 1px #000000;
 }
 .headersix {
+  height: 3em;
   grid-column: 9/11;
   grid-row: 2;
+  background-color: #C2B0C9;
+  border-top: black solid 0.2em;
+  border-bottom: black solid 0.2em;
+  box-shadow: 0px 0px 7px 1px #000000;
 }
 .headerimg {
-  width: 125px;
+  margin-top: 0.4em;
+  width: 30%;
 }
 .headerbutton {
-  border-radius: 4px;
+  margin-top: 0.4em;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
-  background-color: lightblue;
-  border: 2px solid black;
+  background-color: #C2B0C9;
+  font-family: 'Lobster', cursive;
+  font-size: 1.3em;
+  border: none;
+  width: 100%;
 }
 .headerLink {
   color: white;
@@ -136,6 +153,7 @@ header {
 
 .headerAboutUs {
   color: black;
+  width: 100%;
 }
 
 .team {
@@ -148,42 +166,50 @@ header {
 /* ///////////////////////////////////////////////////////////////////////////// */
 table{
   background-color: #C2B0C9;
+  color: #f4efd3;
 }
 th{
   border: 1px solid black;
-  background-color: #f4efd3;
-  color: black;
-  width: 400px;
+  background-color: #9656A1;
+  width: 10em;
   font-family:'PT Sans Narrow', sans-serif;
   font-size: 20px;
   height: 40px;
   line-height: 40px;
 }
-
 td {
   border: 1px solid black;
-  background-color: #f4efd3;
-  color: black;
-  width: 400px;
+  width: 10em;
   font-family:'PT Sans Narrow', sans-serif;
   font-size: 16px;
-  padding: 0;
+  padding-top: 0.3em;
   text-align: center;
   height: 40px;
   line-height: 40px;
 } 
-
-
-.linkToBirthday{
-  background-color: #555;
-  color: white;
-  padding: 1em 1.5em;
+.buttonTD {
+  padding: 0;
+}
+.buttonTD button{
+  background-color: #C2B0C9;
   border: none;
-  cursor: pointer;
-  width: 83%;
-  height: 100%;
+  height: 90%;
+  width: 100%;
+}
+.buttonTD form{
+  /* height: 90%; */
+}
+.form-popup {
+  position: fixed;
+  bottom: 50%;
+  right: 40%;
+  border: 3px solid #f1f1f1;
+  z-index: 9;
 }
 
+/* ///////////////////////////////////////////////////////////////////////////// */
+/* Page Loading Spinner */
+/* ///////////////////////////////////////////////////////////////////////////// */
 #spinner {
   visibility: hidden;
   width: 150px;
@@ -194,7 +220,7 @@ td {
   border-radius: 100%;
 
   position: absolute;
-  top: 50%;
+  top: 30%;
   left: 45%;
 
   animation: spin 1s infinite linear;
