--- a/public/styles/state.css
+++ b/public/styles/state.css
@@ -1,41 +1,58 @@
 
 
 /* Button used to open the contact form - fixed at the bottom of the page */
-.open-button {
+#open-button{
+  display: flex;
+  flex-direction: row;
   background-color: #555;
   color: white;
-  padding: 16px 20px;
-  border: none;
+  padding: 0.6em 0.9em;
   cursor: pointer;
   opacity: 0.8;
-  width: 100px;
-  height: 50px;
   margin-top: 0;
-  border: 2px solid black;
-}
-
-/* The popup form - hidden by default */
-.form-popup {
-  display: none;
+  border: 0.2em solid black;
   position: fixed;
-  bottom: 50%;
-  right: 40%;
-  border: 3px solid #f1f1f1;
-  z-index: 9;
+  top: 50%;
+}
+#callToAction{
+  background-color: #555;
+  color: white;
+  width: 4em;
+  height: 10em;
+  border: none;
+}
+#btn-add{
+  width: 100%;
+  background-color: #4CAF50;
+  color: white;
+  cursor: pointer;
+  padding: 16px 20px;
+}
+/* #btn-cancel{
+  width: 40%;
+} */
+/* The popup form - hidden by default */
+#myForm {
+  display: flex;
+  flex-direction: row-reverse;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  border: 0.2em solid #f1f1f1;
+  width: 25em;
 }
 
 /* Add styles to the form container */
 .form-container {
-  max-width: 300px;
-  padding: 10px;
+  width: 100%;
+  padding: 1em;
   background-color: white;
 }
 
 /* Full-width input fields */
 .form-container input[type=text] {
   width: 100%;
-  padding: 15px;
-  margin: 5px 0 22px 0;
+  padding: 1em;
+  margin: 0.3em 0 1.5em 0;
   border: none;
   background: #f1f1f1;
 }
@@ -50,6 +67,7 @@
 .form-container .btn {
   background-color: #4CAF50;
   color: white;
+  cursor: pointer;
   padding: 16px 20px;
   border: none;
   cursor: pointer;
@@ -64,20 +82,7 @@
 }
 
 /* Add some hover effects to buttons */
-.form-container .btn:hover, .open-button:hover {
+/* .form-container .btn:hover, .open-button:hover {
   opacity: 1;
-}
-
-.open-button-two {
-  background-color: #555;
-  color: white;
-  padding: 16px 20px;
-  cursor: pointer;
-  opacity: 0.8;
-  width:100%;
-  height: 100%;
-  display:inline-block;
-  margin-top: 0;
-  box-sizing: border-box;
-}
+} */
 
