--- a/views/layout/head.ejs
+++ b/views/layout/head.ejs
@@ -1,10 +1,11 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Birthday Finder</title>
+<link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="/styles/reset.css" />
 <link rel="stylesheet" href="/styles/base.css" />
 <link rel="stylesheet" href="/styles/layout.css" />
 <link rel="stylesheet" href="/styles/module.css" />
 <link rel="stylesheet" href="/styles/theme.css" />
 <link rel="stylesheet" href="/styles/state.css" />
-<!-- <script src="app.js"></script> -->
+
