--- a/views/layout/search.ejs
+++ b/views/layout/search.ejs
@@ -1,6 +1,6 @@
 <div id="searches-form">
   <form action="/searches" method="post">
-    <h3>What happened on the day you were born?</h3>
+    <h3 class="typedelement"></h3>
     <input type="date" name="search" date="00/00/0000" required>
     <!-- <input type="tel" name="search" pattern="^\d{2}-\d{2}-\d{4}$" > -->
     <button onclick="showSpinner()" type="submit">Search</button>
