--- a/views/layout/tablerow.ejs
+++ b/views/layout/tablerow.ejs
@@ -10,30 +10,30 @@
     <tr id=<%= bday.id%>>
         <td><%= bday.first_name %></td>
         <td><%= bday.birthday %></td>
-        <td> 
-            <form class="linkToBirthday" action="/searches" method="post">
+        <td class="buttonTD"> 
+            <form action="/searches" method="post">
                 <input type="hidden" name="search" value=<%= bday.birthday %>>
                 <button onclick="showSpinner()">Check it out!</button>
             </form>
         </td>
-        <td>
+        <td class="buttonTD">
             <button class="open-button-two" onclick="openForm(<%=bday.id%>)">Update</button>
-            <div class="form-popup" id="myForm<%=bday.id%>">
-            <form action="/update/<%=bday.id%>" class="form-container" method="post">
-            <input type="hidden" name="_method" value="put">
-            <input type="text"  name="first_name" value=<%=bday.first_name%>>
-            <input type="text" name="birthday" value=<%=bday.birthday%>>
-            <input type="hidden" name="id" value=<%=bday.id%>>
-            <button type="submit" class="btn">Save changes</button>
-            <button type="button" class="btn cancel" onclick="closeForm(<%=bday.id%>)">Close</button>
-            </form>
+            <div class="form-popup" id="myForm<%=bday.id%>" style="display: none;">
+                <form action="/update/<%=bday.id%>" class="form-container" method="post">
+                    <input type="hidden" name="_method" value="put">
+                    <input type="text"  name="first_name" value=<%=bday.first_name%>>
+                    <input type="text" name="birthday" value=<%=bday.birthday%>>
+                    <input type="hidden" name="id" value=<%=bday.id%>>
+                    <button type="submit" class="btn">Save changes</button>
+                    <button type="button" class="btn cancel" onclick="closeForm(<%=bday.id%>)">Close</button>
+                </form>
             </div>
         </td>
-        <td>
-        <form class="deleteForm"action="/delete/<%=bday.id%>" method="post">
-        <input type="hidden" name="_method" value="delete">
-        <button class ="open-button-two"type="submit"  id="<%= bday.id %>">Delete</button>
-    </form>
+        <td class="buttonTD">
+            <form class="deleteForm"action="/delete/<%=bday.id%>" method="post">
+                <input type="hidden" name="_method" value="delete">
+                <button class ="open-button-two"type="submit"  id="<%= bday.id %>">Delete</button>
+            </form>
      </td>
         
     </tr>
@@ -42,10 +42,10 @@
 
 <script>
 function openForm(x) {
-  document.getElementById(`myForm${x}`).style.display = "block";
+  document.getElementById(`myForm${x}`).style.display ="block";
 }
 
 function closeForm(x) {
-  document.getElementById(`myForm${x}`).style.display = "none";
+  document.getElementById(`myForm${x}`).style.display ="none";
 }
 </script>
