--- a/views/pages/aboutus.ejs
+++ b/views/pages/aboutus.ejs
@@ -11,26 +11,28 @@
 
             <!-- <img class ='team' src= 'https://files.slack.com/files-pri/T039KG69K-FQR1K4TFS/image_from_ios.jpg'> -->
             <div class="results-div">
-                <img alt="placeholder" src='https://carlisletheacarlisletheatre.org/images/person-clipart-silhouette-7.jpg'>
-                <h3>Stephen - The King</h3>
-                <p>I'm Charles Glass, and im a software developer. I have experience in HTML, Javascript and CSS, also have experience with Github, and Chrome DEV tool. I have an interest in working with user data, databases, servers and the cloud. My background is in Customer Service, which tought me how to work on a team, and to understand what a customer is looking for in a product. My last job was at Dick's Sporting Goods. It was a great company, and had opportunities for me to move up in positions, but I quickly realized that isn't what I wanted to do. Throughout my education, computer science is what I was most interested in so I decided to persue it as my career</p>
+                <img alt="placeholder" src='https://files.slack.com/files-pri/T039KG69K-FQWCHPWG7/img_0341.jpeg'>
+                <h3>Stephen Koch - JavaScript Developer</h3>
+                <p>Hello! My name is Stephen Koch I am a JavaScript software developer with years of management experience.  My management experience have given me the tools to strategize, plan, and to work well with a team to complete a task. I am interested in software analytics, data science, and working with cloud services.  I always enjoy a good challenge and love solving problems.</p>
                 <a alt="linkedIn" href= "https://www.linkedin.com/in/charles-glass1/"></a>
               </div>
               <div class="results-div">
-                <img alt="placeholder" src='https://carlisletheacarlisletheatre.org/images/person-clipart-silhouette-7.jpg'>
-                <h3>Paul - The Ace</h3>
-                <p>I'm Charles Glass, and im a software developer. I have experience in HTML, Javascript and CSS, also have experience with Github, and Chrome DEV tool. I have an interest in working with user data, databases, servers and the cloud. My background is in Customer Service, which tought me how to work on a team, and to understand what a customer is looking for in a product. My last job was at Dick's Sporting Goods. It was a great company, and had opportunities for me to move up in positions, but I quickly realized that isn't what I wanted to do. Throughout my education, computer science is what I was most interested in so I decided to persue it as my career </p>
+                    <img alt="placeholder" src='https://files.slack.com/files-pri/T039KG69K-FQUG5QBUM/picture.png'>
+                    <h3>Leandro Rodriguez - JavaScript Developer</h3>
+                    <p>Hello my Name is Leandro Rodriguez I am a software developer who spent the last 5 years in the navy traveling all around the world world while working in a team environment I am very passionate about music and anything that involves being creative to solve a problem and make things easier for our day to day living.</p>
+                    <a alt="linkedIn" href= "https://www.linkedin.com/in/charles-glass1/"></a>
+                  </div>
+              <div class="results-div">
+                <img id="pauls-pic" alt="placeholder" src='https://ca.slack-edge.com/T039KG69K-UM3LT4FR9-3537c1cba08b-512'>
+                <h3>Paul Bennett - JavaScript Developer</h3>
+                <p>My name is Paul Bennett. I have been a delivery driver, construction workerker, and have worked many carers as a commercial mariner. I wanted to learn to develop software and decided to attend Codefellows so that I can move in that new direction.
+                        I now have experience building an HTML file for web display, using basic javascript as well as more productive libraries, and styling the look and layout with different libraries in Cascading Style Sheets, as well as building servers that deploy web pages and linking databases to a project creating a full stack full CRUD web application.
+                        I'm curious and excited about where technology is heading in the future.  I want to be part of that.</p>
                 <a alt="linkedIn" href= "https://www.linkedin.com/in/charles-glass1/"></a>
               </div>
               <div class="results-div">
-                <img alt="placeholder" src='https://carlisletheacarlisletheatre.org/images/person-clipart-silhouette-7.jpg'>
-                <h3>Leandro - The Jack</h3>
-                <p>I'm Charles Glass, and im a software developer. I have experience in HTML, Javascript and CSS, also have experience with Github, and Chrome DEV tool. I have an interest in working with user data, databases, servers and the cloud. My background is in Customer Service, which tought me how to work on a team, and to understand what a customer is looking for in a product. My last job was at Dick's Sporting Goods. It was a great company, and had opportunities for me to move up in positions, but I quickly realized that isn't what I wanted to do. Throughout my education, computer science is what I was most interested in so I decided to persue it as my career </p>
-                <a alt="linkedIn" href= "https://www.linkedin.com/in/charles-glass1/"></a>
-              </div>
-              <div class="results-div">
-                <img alt="placeholder" src='https://carlisletheacarlisletheatre.org/images/person-clipart-silhouette-7.jpg'>
-                <h3>Charles - The Joker</h3>
+                <img alt="placeholder" src='https://files.slack.com/files-pri/T039KG69K-FQUNDR5EU/img_20191121_150956.jpg'>
+                <h3>Charles Glass - JavaScript Developer</h3>
                 <p>I'm Charles Glass, and im a software developer. I have experience in HTML, Javascript and CSS, also have experience with Github, and Chrome DEV tool. I have an interest in working with user data, databases, servers and the cloud. My background is in Customer Service, which tought me how to work on a team, and to understand what a customer is looking for in a product. My last job was at Dick's Sporting Goods. It was a great company, and had opportunities for me to move up in positions, but I quickly realized that isn't what I wanted to do. Throughout my education, computer science is what I was most interested in so I decided to persue it as my career</p>
                 <a alt="linkedIn" href= "https://www.linkedin.com/in/charles-glass1/"></a>
               </div>
