--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -16,3 +16,6 @@ header{
   top: 0; /* Position the navbar at the top of the page */
   width: 100%; /* Full width */
 }
+header h1{
+  margin-top: 0.15em;
+}
