--- a/views/layout/charlietest.ejs
+++ b/views/layout/charlietest.ejs
@@ -2,7 +2,7 @@
   <button id='callToAction'onclick="openForm()">Add to Database</button>
   <div id="myForm" style="display: none;">
     <form action="/saving" class="form-container" method="post">
-      <input type="text" placeholder="enter first name" name="first_name" required>
+      <input id="firstName" type="text" placeholder="enter first name" autocomplete="off" name="first_name" required>
       <input type="hidden" name="birthday" value=<%=BD%>>
       <button type="submit" id="btn-add">Add to DB</button>
       <!-- <button type="button" id="btn-cancel" onclick="closeForm()">Close</button> -->
