--- a/views/pages/aboutus.ejs
+++ b/views/pages/aboutus.ejs
@@ -23,7 +23,7 @@
                     <a alt="linkedIn" href= "https://www.linkedin.com/in/charles-glass1/"></a>
                   </div>
               <div class="results-div">
-                <img id="pauls-pic" alt="placeholder" src='https://ca.slack-edge.com/T039KG69K-UM3LT4FR9-3537c1cba08b-512'>
+                <img alt="placeholder" src='https://files.slack.com/files-pri/T039KG69K-FQJLJ9KFD/img_20191122_121604_2.jpg'>
                 <h3>Paul Bennett - JavaScript Developer</h3>
                 <p>My name is Paul Bennett. I have been a delivery driver, construction workerker, and have worked many carers as a commercial mariner. I wanted to learn to develop software and decided to attend Codefellows so that I can move in that new direction.
                         I now have experience building an HTML file for web display, using basic javascript as well as more productive libraries, and styling the look and layout with different libraries in Cascading Style Sheets, as well as building servers that deploy web pages and linking databases to a project creating a full stack full CRUD web application.
